@@ -6,8 +6,6 @@ import com.accounts.domain.Currency;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -15,22 +13,24 @@ import java.util.stream.Collectors;
 @Service
 @Slf4j
 public class BankService {
-    private static List<BankAccount> bankAccounts = Arrays.asList(
-            new BankAccount("A100", "C100", Currency.USD, 1500.00f, "Active"),
-            new BankAccount("A101", "C101", Currency.CAD, 3000.00f, "Active"),
-            new BankAccount("A102", "C102", Currency.EUR, 2500.00f, "Inactive"),
-            new BankAccount("A103", "C103", Currency.USD, 5000.00f, "Active"),
-            new BankAccount("A104", "C104", Currency.EUR, 7500.00f, "Active")
+
+    // Immutable lists for bank accounts and clients
+    private static final List<BankAccount> bankAccounts = List.of(
+            new BankAccount("A100", "C100", Currency.USD, 106.00f, "A"),
+            new BankAccount("A101", "C200", Currency.CAD, 250.00f, "A"),
+            new BankAccount("A102", "C300", Currency.CAD, 333.00f, "I"),
+            new BankAccount("A103", "C400", Currency.EUR, 4000.00f, "A"),
+            new BankAccount("A104", "C500", Currency.EUR, 4000.00f, "A")
+    );
+    private static final List<Client> clients = List.of(
+            new Client("C100", "A100", "Elena", "Maria", "Gonzalez"),
+            new Client("C200", "A101", "James", "Robert", "Smith"),
+            new Client("C300", "A102", "Aarav", "Kumar", "Patel"),
+            new Client("C400", "A103", "Linh", "Thi", "Nguyen"),
+            new Client("C500", "A104", "Olivia", "Grace", "Johnson")
     );
 
-    private static List<Client> clients = Arrays.asList(
-            new Client("C100", "A100", "John", "T.", "Doe"),
-            new Client("C101", "A101", "Emma", "B.", "Smith"),
-            new Client("C102", "A102", "James", "R.", "Brown"),
-            new Client("C103", "A103", "Olivia", "S.", "Johnson"),
-            new Client("C104", "A104", "William", "K.", "Jones")
-    );
-
+    // Method to get all bank accounts
     public List<BankAccount> getAccounts() {
         return bankAccounts;
     }
@@ -40,7 +40,7 @@ public class BankService {
                 .collect(Collectors.toMap(
                         account -> account, // Key Mapper
                         account -> clients.stream()
-                                .filter(c -> c.getId().equals(account.getClientId()))
+                                .filter(c -> c.id().equals(account.clientId()))
                                 .findFirst()
                                 .orElse(null) // Value Mapper
                 ));
